# mcp-helvarnet

./: .gitattributes  .gitignore  NOTICE  README.md  man.md  mcpman.md  pyproject.toml
notebooks/: experiments.ipynb  experiments_command.ipynb
src/mcp_helvarnet/: devices.py  groups.py  info.py  main.py  scenes.py
src/mcp_helvarnet/utils/: utils.py
